--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -30,4 +24,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background-image: url('https://ak8.picdn.net/shutterstock/videos/24263918/thumb/1.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
