--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Bree+Serif&display=swap');
+
 .App {
   text-align: center;
 }
@@ -32,4 +34,117 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  font-family: 'Bree Serif', serif;
+  background-color: rgba(255,10,10,.7);
+  position: sticky;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 80vh;
+  font-family: 'Bree Serif', serif;
+  font-size: 30px;
+  color: white;
+  background-color: rgba(0,0,0,.5);
+  margin: 5%;
+  margin-top: 0;
+
+}
+
+.formdiv {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 40vh;
+  width: 50%;
+}
+
+button {
+  background-color: grey;
+  margin-bottom: 30%;
+  width: inherit;
+}
+
+input {
+  text-align: center;
+}
+
+.optionsContainer {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.optionsDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(0,0,0,.5);
+  color: white;
+  margin: 5%;
+  height: 150px;
+}
+
+.optionsDiv button {
+
+  width: 50px;
+}
+
+.selectedDiv {
+  font-family: 'Bree Serif', serif;
+  background-color: rgba(0,0,0,1);
+  color: white;
+  position: sticky;
+  top: 0;
+  margin: 5%;
+}
+
+h1 {
+  font-family: 'Bree Serif', serif;
+  background-color: rgba(0,0,0,.5);
+  color: white;
+  margin: 5%;
+}
+
+.finalContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 5%;
+  height: 80vh;
+}
+
+.finalContainer h1 {
+  width: 100%;
+}
+
+.finalDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Bree Serif', serif;
+  background-color: rgba(0,0,0,.5);
+  color: white;
+  margin: 5%;
+  height: 30vh;
+  width: 80%;
+}
+/*tablet*/
+@media (min-width: 768px) {
+
+}
+
+/*laptop/desktop*/
+@media (min-width: 992px) {
+
 }
