--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ input {
   flex-direction: column-reverse;
 }
 
-.optionsDiv {
+.optionDiv {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -141,6 +141,58 @@ h1 {
 }
 /*tablet*/
 @media (min-width: 768px) {
+  .optionsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .optionsDiv {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 0;
+  }
+
+  .optionDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* align-items: center; */
+    background-color: rgba(0,0,0,.5);
+    color: white;
+    margin: 2%;
+    width: 20%;
+    height: 150px;
+  }
+
+  .optionDiv h3 {
+    margin-bottom: 0;
+  }
+
+  .optionDiv button {
+    margin-bottom: 10px;
+  }
+  .selectedDiv {
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Bree Serif', serif;
+    background-color: rgba(0,0,0,.5);
+    color: white;
+    position: sticky;
+    top: 0;
+    margin: 5%;
+    margin-top: 0;
+  }
+
+  .selectedDiv h1 {
+    width: 49%;
+  }
+
+  .selectedDiv div {
+    width: 49%;
+    margin: 0 auto;
+  }
 
 }
 
