--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,6 @@ body {
   justify-content: center;
   font-family: 'Bree Serif', serif;
   background-color: rgba(255,10,10,.7);
-  position: sticky;
 }
 
 form {
@@ -141,6 +140,7 @@ h1 {
 }
 /*tablet*/
 @media (min-width: 768px) {
+
   .optionsContainer {
     display: flex;
     flex-direction: column;
@@ -192,6 +192,10 @@ h1 {
   .selectedDiv div {
     width: 49%;
     margin: 0 auto;
+  }
+
+  .selected {
+    border: 3px solid red;
   }
 
 }
